Completed french toast page

--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>French Toast</title>
 </head>
 <body>
     <h1>French Toast</h1>
-    <img src="../images/frenchtoastpic.jpg"
+    <img src="../images/frenchtoastpic.jpg" alt="picture of french toast">
+    <h2>A great snowday recipe!</h2>
+    <p>Easy to make and loaded with flavor, this recipe is a must for an early cold snowed in day!</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>4 slices of bread (whole white works best)</li>
+            <li>2 eggs</li>
+            <li>Butter</li>
+            <li>Vanilla extract</li>
+            <li>Sugar</li>
+            <li>Cinnamon</li>
+            <li>Nutmeg</li>
+            <li>Oat milk</li>
+        </ul>
+
+    <h3>Instructions</h3>
+        <ol>
+            <li>Crack eggs into a bowl</li>
+            <li>Combine sugar, vanilla extract, cinnamon, nutmeg, and oat milk in with eggs and whisk</li>
+            <li>Heat butter in pan over medium heat until melted</li>
+            <li>Dip pieces of bread in egg mixture and place in pan</li>
+            <li>Heat in pan until golden brown on each side</li>
+            <li>Serve with warm syrup</li>
+        </ol>
+
 </body>
 </html>
