added fried rice recipe

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <h1>Odin Recipes</h1>
     <h3>
-    <a href="recipes/frenchtoast.html" alt="Link to recipe of french toast">French Toast Recipe</a>
+        <a href="recipes/frenchtoast.html" alt="Link to recipe of french toast">French Toast Recipe</a>
     </h3>
     <h3>
         <a href="recipes/marinated-grilled-chicken.html" alt="Link to recipe of marinated grilled chicken">Marinated Grilled Chicken Recipe</a>
+    </h3>
+    <h3>
+        <a href="recipes/fried-rice.html" alt="Link to recipe for fried rice">Fried Rice Recipe</a>
     </h3>
 </body>
 </html>
