--- a/recipes/marinated-grilled-chicken.html
+++ b/recipes/marinated-grilled-chicken.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marinated Grilled Chicken</title>
+    <title>Grilled Chicken</title>
 </head>
 <body>
-    
+    <h1>Marinated Grilled Chicken</h1>
+    <img src="../images/grilled-chicken.jpg" alt="picture of grilled chicken">
+<h2>Quick protein on the grill</h2>
+    <p>Easy recipe that you can grill up in less than 10 min</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>4 Chicken Thighs</li>
+            <li>Marinade of your choice (italian dressing works great)</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Garlic Salt</li>
+        </ul>
+
+    <h3>Instructions</h3>
+        <ol>
+            <li>Marinate chicken and keep in fridge for at least one hour before grilling (overnight preferred)</li>
+            <li>Transfer marinated chicken to a plate and season with salt, pepper, and garlic salt</li>
+            <li>Heat grill on medium-high heat (~400 degrees)</li>
+            <li>Place chicken directly on grill and cook for around 5 minutes or so</li>
+            <li>Flip chicken and cook an additional 3 minutes or so</li>
+            <li>Pull chicken from grill once internal temperature reaches 170 degrees</li>
+        </ol>
+
 </body>
 </html>
